# digiretki_to_lipas

./: .gitignore  CHANGELOG.orig.txt  LICENSE.md  README.md  pyproject.toml
Documentation/: CHANGELOG.lounaispaikka.digiretki.old.txt  lipas_synchronization_käyttöohjeet.md  lipas_synchronization_solution.md  point_deduplication.md
Documentation/virma_lipas_type_mapping/: README.md  virma_lipas_type_mapping.csv
notebooks/mapping/: mapping.ipynb
notebooks/point_deduplicator/: README.md  point_deduplicator.ipynb
notebooks_not_cleaned/: virma_lipas_matched copy.ipynb  virma_lipas_matched.ipynb
notebooks_not_cleaned/possible_bool_columns/: accesibil.ipynb  wc_bool.ipynb
notebooks_not_cleaned/properties/: json_properties.ipynb
notebooks_not_cleaned/routes/: properties.ipynb  route_deduplication.ipynb
notebooks_with_example_data/mapping/: final_matching_df.csv  mapping.ipynb  tammireitit_final_cleaned_mapped.csv  tammireitit_lipas_type_mapping.csv  tammireitit_mapping.csv
notebooks_with_example_data/point_deduplicator/: point_deduplicator_tammireitit.ipynb  spatial_distance_search.csv  tammireitit_lipas_type_mapping.csv
notes/: muistiinpanot_Emmi.md
src/: point_deduplicator.py
